docs/0.0.7/configuration.mdx
---
title: 'Configuration'
description: 'Configuring Options for Doku'
icon: 'sliders'
---

This guide covers all the available environment variables to fine-tune Doku according to your needs.

## Doku Client

### Environment Varibales

<ResponseField name="INIT_DB_HOST" required>
  Sets the password for the user authenticating with ClickHouse.

  **Example**:
  ```yaml
  export INIT_DB_HOST=127.0.0.1
  ```
</ResponseField>

<ResponseField name="INIT_DB_PORT" required>
  Sets the password for the user authenticating with ClickHouse.

  **Example**:
  ```yaml
  export INIT_DB_PORT=8123
  ```
</ResponseField>

<ResponseField name="INIT_DB_DATABASE" required>
  Name of the database in Clickhouse to be used by Doku

  **Example**:
  ```yaml
  export INIT_DB_DATABASE=default
  ```
</ResponseField>

<ResponseField name="INIT_DB_USERNAME" required>
  Sets the username for authenticating with ClickHouse.

  **Example**:
  ```yaml
  export INIT_DB_USERNAME=default
  ```
</ResponseField>

<ResponseField name="INIT_DB_PASSWORD" required>
  Sets the password for authenticating with ClickHouse.

  **Example**:
  ```yaml
  export INIT_DB_PASSWORD=default
  ```
</ResponseField>

<ResponseField name="SQLITE_DATABASE_URL" required>
  Specifies the location where SQLITE data is stored.

  **Example**:
  ```yaml
  export SQLITE_DATABASE_URL=file:/app/client/data/data.db
  ```
</ResponseField>

### Sample Environment File (.env)

```.env.example .env
INIT_DB_HOST: 127.0.0.1
INIT_DB_PORT: 8123
INIT_DB_DATABASE: default
INIT_DB_USERNAME: default
INIT_DB_PASSWORD: DOKU
SQLITE_DATABASE_URL: file:/app/client/data/data.db
```

## Doku Ingester

### Environment Varibales

<ResponseField name="DOKU_DB_HOST" required>
  Specifies the host address of the ClickHouse server for Doku to connect to.

  **Example**:
  ```yaml
  export DOKU_DB_HOST=127.0.0.1
  ```
</ResponseField>

<ResponseField name="DOKU_DB_PORT" required>
  Defines the port on which ClickHouse listens.

  **Example**:
  ```yaml
  export DOKU_DB_PORT=9000
  ```
</ResponseField>

<ResponseField name="DOKU_DB_NAME" required>
  Name of the database in Clickhouse to be used by Doku

  **Example**:
  ```yaml
  export DOKU_DB_NAME=default
  ```
</ResponseField>

<ResponseField name="DOKU_DB_USER" required>
  Sets the username for authenticating with ClickHouse.

  **Example**:
  ```yaml
  export DOKU_DB_USER=default
  ```
</ResponseField>

<ResponseField name="DOKU_DB_PASSWORD" required>
  Sets the password for authenticating with ClickHouse.

  **Example**:
  ```yaml
  export DOKU_DB_PASSWORD=DOKU
  ```
</ResponseField>

<ResponseField name="DOKU_PRICING_JSON_URL">
  URL of the json file containing the LLM Pricing data.

**Default Value**:
```shell
https://raw.githubusercontent.com/dokulabs/ingester/main/assets/pricing.json
```

**Example**:
```yaml
export DOKU_PRICING_JSON_URL=https://raw.githubusercontent.com/dokulabs/ingester/main/assets/pricing.json
  ```
</ResponseField>

<ResponseField name="DOKU_DB_MAX_IDLE_CONNS">
  Maximum number of concurrent idle database connections.

**Default Value**:
```shell
10
```

**Example**:
```shell
export DOKU_DB_MAX_IDLE_CONNS=10
```
</ResponseField>

<ResponseField name="DOKU_DB_MAX_OPEN_CONNS">
  Maximum number of concurrent open database connections.

**Default Value**:
```shell
20
```

**Example**:
```shell
export DOKU_DB_MAX_OPEN_CONNS=20
```
</ResponseField>

<ResponseField name="DOKU_DB_RETENTION_PERIOD">
  The `DOKU_DB_RETENTION_PERIOD` specifies the TTL for data in Clickhouse.

**Default Value**:
```shell
6 MONTH
```

**Example**:
```shell
export DOKU_DB_RETENTION_PERIOD="6 MONTH"
```
</ResponseField>


### Sample Environment File (.env)

```.env.example .env
DOKU_DB_HOST="127.0.0.1"
DOKU_DB_PORT="9000"
DOKU_DB_NAME="default"
DOKU_DB_USER="default"
DOKU_DB_PASSWORD="DOKU"
```

---

<CardGroup cols={2}>
<Card title="Integrations" href="/0.0.7/integrations/introduction" icon='circle-nodes'>
Integrate your LLM Provider with Doku 
</Card>
<Card title="Connections" href="/0.0.7/connections/intro" icon='link'>
Connect to your existing Observablity Platform
</Card>
</CardGroup>